MaxPermSize no more needed
Java HotSpot(TM) 64-Bit Server VM warning: ignoring option
MaxPermSize=300m; support was removed in 8.0